--- a/css/olifantstyle.css
+++ b/css/olifantstyle.css
@@ -12,13 +12,16 @@ h1{
   padding-bottom: 0px;
 }
 
-body{
-    background-color: #e3ebe0;
+html, body{
+width:100%;
+height:100%;
+background-color: #e3ebe0;
+padding:0;
 }
 
 footer{
-  padding-bottom:100px;
-  padding-top:100px;
+  padding-bottom:50px;
+  padding-top:50px;
 }
 .gallery{
   display:grid;
@@ -100,8 +103,8 @@ body,
 button{
   float:none;
   width:100%;
-  height:100%;
-}
+  height:auto;
+  margin-bottom: 0px;}
 
 }
 
