--- a/css/header.css
+++ b/css/header.css
@@ -95,7 +95,7 @@ h1#titel{
 	border-bottom: 1px solid #fff;
   margin-top:25px;
   margin-bottom:25px;
-  width:55%;
+  width:50%;
   margin-left:65px;
 }
 
@@ -108,8 +108,8 @@ h1#titel{
   text-align:center;
   font-family: 'Gabriela';
   font-size:32px;
-  margin-top:25px;
-  margin-bottom:10px;
+  margin-top:30px;
+  margin-bottom:50px;
   font-style:italic;
 }
 /* Body */
@@ -125,7 +125,7 @@ aside#sidebar{
 
 article#main_col{
   float:left;
-  width:45%;
+  width:50%;
   margin-top:0px;
   margin-left:65px;
   margin-right:100px;
@@ -144,11 +144,14 @@ article p{
 }
 
 aside#sidebar img{
-  max-width:300px;
-  max-height:300px;
+  max-width:350px;
+  max-height:350px;
   border-radius:100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-top:25px;
+  margin-top:20px;
+  position:absolute;
+  left:65%;
+  top:35%;
 }
 
 section#main {
@@ -179,7 +182,7 @@ section#main {
   width:550px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-top:1em;
-  margin-bottom:1em;
+  margin-bottom:3em;
 }
 
 #solliciteren button{
