--- a/css/vacatures.css
+++ b/css/vacatures.css
@@ -4,6 +4,7 @@
   padding:0;
 }
 
+
 body{
   background-color:#f4f4f4;
 }
@@ -80,30 +81,21 @@ header .last{
 
 }
 
-
-#boxes .box img{
-  width:200px;
-  height:200px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom:20px;
-  margin-left:50px;
-}
-
-
 #boxes h3{
   margin-bottom:20px;
   font-family: 'Gabriela';
   font-size:26px;
-  margin-left:50px;
+
+  text-align:center;
 }
 
 #boxes p{
   text-align:justify;
-  margin-left:50px;
-  border: 10px solid;
+
+
 }
 .sollicitatie p{
-  width:40%;
+  width:50%;
 }
 
 .sollicitatie h1{
@@ -120,13 +112,23 @@ h3 a{
   text-decoration: none;
 }
 
-
-
 #boxes .box{
   float:left;
-  width: 30%;
+  width: 28%;
   padding:15px;
   text-align:center;
+  box-shadow: 0 0 12px 0 rgba(0,0,0,.5);
+  margin-right:20px;
+  height:545px;
+  margin-bottom:5em;
+}
+
+#boxes .box img{
+  height:200px;
+  width:auto;
+  text-align:center;
+  box-shadow: 0 0 12px 0 rgba(0,0,0,.5);
+  margin-bottom:20px;
 }
 
 #boxes{
@@ -134,4 +136,90 @@ h3 a{
   font-family: 'Gabriela';
   letter-spacing: 1.1px;
   font-size: 14px;
+  margin-left:65px;
+
+}
+
+#wijwillen{
+  font-weight:bold;
+}
+
+/* Footer */
+
+footer {
+  background-color:#c1dea0;
+  clear:both;
+  width:100%;
+  overflow:hidden;
+}
+
+#voet .box {
+  width:30%;
+  float:left;
+  text-align:center;
+  padding:15px;
+}
+
+#voet a{
+  text-decoration:none;
+}
+
+#voet li{
+  list-style-type:none;
+}
+
+#voet {
+  font-family: 'Gabriela';
+}
+
+#voet h3 {
+  margin-top:20px;
+  font-size:24px;
+  margin-bottom:20px;
+}
+
+#social img {
+  background: #9fbf7b;
+  border-radius: 25px;
+  padding: 2px;
+  box-shadow: 2px 2px 6px black;
+
+  -moz-transition: all .2s ease-in;
+  -o-transition: all .2s ease-in;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+  margin-left:10px;
+}
+
+#social img:hover {
+  background: #f6469f;
+  border-radius: 25px;
+  padding: 2px;
+  cursor:pointer;
+}
+#navigatie li{
+}
+
+#navigatie a{
+text-decoration: none;
+color:black;
+font-weight:bold;
+margin-bottom:10px;
+}
+
+#navigatie a:hover{
+  color: #f6469f;
+  cursor:pointer;
+}
+
+#navigatie h3 {
+  margin-bottom:15px;
+  text-align:center;
+}
+#contact{
+  text-align:center;
+}
+
+#contact img {
+  justify-content: left;
 }
