--- a/css/vacatures.css
+++ b/css/vacatures.css
@@ -72,7 +72,7 @@ header .last{
 }
 
 .sollicitatie{
-  max-width:80%;
+  width:50%;
   float:left;
   margin-left: 65px;
   margin-top:25px;
@@ -95,9 +95,26 @@ header .last{
 
 }
 .sollicitatie p{
-  width:50%;
+  width:80%;
 }
 
+#salaris {
+  width:30%;
+  float:left;
+  margin-top:25px;
+  font-family: 'Gabriela';
+
+
+}
+
+#salaris h1{
+  margin-bottom:10px;
+}
+
+#salaris p{
+  font-size:14px;
+  margin-bottom:10px;
+}
 .sollicitatie h1{
   margin-bottom:10px;
 }
@@ -112,15 +129,26 @@ h3 a{
   text-decoration: none;
 }
 
+#legeruimte{
+  float:left;
+  width:100%;
+  margin-bottom:50px;
+}
+
+#tekst{
+  margin-bottom:50px;
+}
+
 #boxes .box{
+  position:relative;
   float:left;
   width: 28%;
   padding:15px;
   text-align:center;
   box-shadow: 0 0 12px 0 rgba(0,0,0,.5);
   margin-right:20px;
-  height:545px;
-  margin-bottom:5em;
+  border:1px;
+  margin-bottom:2em;
 }
 
 #boxes .box img{
@@ -141,9 +169,32 @@ h3 a{
 }
 
 #wijwillen{
+  margin-top:40px;
   font-weight:bold;
 }
 
+.button{
+  text-align:center;
+  clear:both;
+  margin-bottom:20px;
+
+}
+
+.btn{
+  width:300px;
+  max-width:100%;
+  padding: 1em 2em;
+  background-color:#9fbf7b;
+  border:1px solid #9fbf7b;
+  font-size:16px;
+  border-radius:.50em;
+  font-family: 'Gabriela';
+  text-shadow: 0 1px 0;
+}
+
+.btn:hover{
+  cursor:pointer;
+}
 /* Footer */
 
 footer {
