--- a/css/header.css
+++ b/css/header.css
@@ -31,9 +31,38 @@ header a{
 
 header li{
   float:left;
-  display:inline;
+  display:block;
   padding: 0 10px 0 10px;
 }
+
+.dropdown {
+  color:#f6469f;
+}
+ul li ul {
+  visibility: hidden;
+  position: absolute;
+  transition: all 1.0s ease;
+  display: none;
+  min-width:5rem;
+}
+
+ul li:hover > ul,
+ul li:focus-within > ul,
+ul li ul:hover {
+  visibility: visible;
+  display: block;
+  z-index:9999;
+  padding:2px;
+  color:#f6469f;
+}
+
+ul li ul li {
+  clear: both;
+  width: 100%;
+  padding:5px;
+}
+
+
 
 header img{
   margin-left:65px;
@@ -218,6 +247,7 @@ text-shadow: 0 1px 0;
   margin-top:10px;
   margin-bottom:10px;
   font-size:28px;
+
 }
 
 #boxes{
@@ -225,6 +255,8 @@ text-shadow: 0 1px 0;
   font-family: 'Gabriela';
   letter-spacing: 1.1px;
   font-size: 14px;
+  text-align:center;
+  margin-left:50px;
 }
 
 #boxes .box{
@@ -232,6 +264,7 @@ text-shadow: 0 1px 0;
   width: 30%;
   padding:15px;
   text-align:center;
+  margin-bottom:20px;
 }
 
 #boxes .box img{
@@ -243,7 +276,6 @@ text-shadow: 0 1px 0;
 
 #boxes .box p{
   text-align:justify;
-  margin-left:50px;
 }
 /* Footer */
 
