--- a/css/diensten.css
+++ b/css/diensten.css
@@ -165,18 +165,13 @@ position:relative;
   margin-top:5em;
 }
 
-#first img{
-  text-align:center;
-  max-width:1000px;
-  max-height:500px;
-}
-
 ul#Diensten li{
   List-style:none;
   Padding:20px;
   border: #cccccc solid 1px;
   margin-bottom:5px;
   background:#cde4b4;
+  object-fit:contain;
 }
 
 footer{
@@ -192,59 +187,105 @@ footer{
   padding-top:0px;
 }
 
-aside#sidebar{
-  font-family:'Gabriela';
-  width:30%;
-  float:right;
-}
 
-aside#sidebar h3{
-  margin-bottom: 10px;
-}
-
-.dark{
-  margin-right:65px;
-  padding:15px;
-  background:#9fbf7b;
-  color:black;
-  margin-bottom:10px;
-}
 
 /* Main_col */
 .paginatitel {
   text-align:center;
   font-family:'Gabriela';
   font-size: 32px;
-  margin-bottom:25px;
+  margin-bottom:30px;
 }
 article#main_col{
   text-align:left;
   font-family:'Gabriela';
   margin-left:65px;
   float:left;
-  width:60%;
+  width:80%;
+
+
+
 }
 
 li h3{
-  margin-bottom:10px;
+  margin-bottom:15px;
+  font-size:26px;
 
 }
 
 li p{
+  clear:both;
   font-family:'Gabriela';
-  width:75%;
+  width:65%;
   text-align:justify;
   margin-bottom:20px;
-  font-size:18px;}
+  font-size:18px;
+  }
 
 article#main_col img{
-  width:215px;
+  width:24%;
   max-height:215px;
-  margin-right:20px;
+  margin-right:1em;
+
   box-shadow: 0 0 12px 0 rgba(0,0,0,.5);
   margin-bottom:15px;
 }
 
 #fotowerk {
-  width:450px !important;
+  width:50% !important;
+  float:left;
+  margin-right:100px;
+}
+
+#knopboeken{
+  margin-top:1em;
+  width:300px;
+  max-width:100%;
+  padding: 1em 2em;
+  background-color:#9fbf7b;
+  border:1px solid #9fbf7b;
+  font-size:16px;
+  border-radius:.50em;
+  font-family: 'Gabriela';
+  text-shadow: 0 1px 0;
+  font-weight:500;
+
+}
+
+#knopboeken:hover{
+  cursor:pointer;
+  color:#f6469f;
+}
+
+#laatsteregel{
+  float:left;
+  width:100%;
+  font-style:italic;
+}
+
+blockquote{
+  font-size: 16px;
+  float:right;
+  width:40%;
+  font-family:'Gabriela';
+  font-style:italic;
+  color: #555555;
+  padding:1em 30px 1em 25px;
+  border-radius:25px;
+  line-height:1.0;
+  background:#d9eac8;
+  text-align:justify;
+}
+
+
+blockquote::after{
+  content: '';
+}
+
+blockquote span{
+  display:block;
+  color:#333333;
+  font-style: normal;
+  font-weight: bold;
+  margin-top:1em;
 }
