--- a/css/diensten.css
+++ b/css/diensten.css
@@ -6,7 +6,7 @@
 
 body{
   background-color:#f4f4f4;
-
+  overflow-x:hidden;
 }
 
 header{
@@ -165,13 +165,15 @@ position:relative;
   margin-top:5em;
 }
 
-ul#Diensten li{
-  List-style:none;
+.container1{
+  margin-left:9em;
+  margin-right:9em;
   Padding:20px;
   border: #cccccc solid 1px;
-  margin-bottom:5px;
+  margin-bottom:20px;
   background:#cde4b4;
   object-fit:contain;
+  text-align:center;
 }
 
 footer{
@@ -194,36 +196,33 @@ footer{
   text-align:center;
   font-family:'Gabriela';
   font-size: 32px;
-  margin-bottom:30px;
-}
-article#main_col{
-  text-align:left;
-  font-family:'Gabriela';
-  margin-left:65px;
-  float:left;
-  width:80%;
-
-
-
+  margin-top:30px;
 }
 
-li h3{
+
+.container1 h3{
   margin-bottom:15px;
-  font-size:26px;
+  font-size:36px;
+  font-family:'Gabriela';
 
 }
 
-li p{
+.container1 p{
+  text-align:justify;
   clear:both;
   font-family:'Gabriela';
-  width:65%;
-  text-align:justify;
+  width:52%;
+  margin:auto;
+  margin-top:10px;
   margin-bottom:20px;
   font-size:18px;
   }
 
-article#main_col img{
-  width:24%;
+
+
+.container1 img{
+  max-width:25%;
+  width:25%;
   max-height:215px;
   margin-right:1em;
 
@@ -233,12 +232,13 @@ article#main_col img{
 
 #fotowerk {
   width:50% !important;
-  float:left;
-  margin-right:100px;
+  max-width:50% !important;
+  text-align:center;
+  box-shadow: 0 0 12px 0 rgba(0,0,0,.5);
+  margin-bottom:15px;
 }
 
 #knopboeken{
-  margin-top:1em;
   width:300px;
   max-width:100%;
   padding: 1em 2em;
@@ -249,6 +249,8 @@ article#main_col img{
   font-family: 'Gabriela';
   text-shadow: 0 1px 0;
   font-weight:500;
+  margin:auto;
+  margin-bottom:1em;
 
 }
 
@@ -258,14 +260,17 @@ article#main_col img{
 }
 
 #laatsteregel{
+  font-size:16px;
+  font-family: 'Gabriela';
   float:left;
   width:100%;
   font-style:italic;
+  margin-bottom:20px;
 }
 
 blockquote{
   font-size: 16px;
-  float:right;
+  margin:auto;
   width:40%;
   font-family:'Gabriela';
   font-style:italic;
@@ -288,4 +293,84 @@ blockquote span{
   font-style: normal;
   font-weight: bold;
   margin-top:1em;
+}
+
+/* Footer */
+
+footer {
+  background-color:#c1dea0;
+  clear:both;
+  width:100%;
+  overflow:hidden;
+}
+
+#voet .box {
+  width:30%;
+  float:left;
+  text-align:center;
+  padding:15px;
+}
+
+#voet a{
+  text-decoration:none;
+}
+
+#voet li{
+  list-style-type:none;
+}
+
+#voet {
+  font-family: 'Gabriela';
+}
+
+#voet h3 {
+  margin-top:20px;
+  font-size:24px;
+  margin-bottom:20px;
+}
+
+#social img {
+  background: #9fbf7b;
+  border-radius: 25px;
+  padding: 2px;
+  box-shadow: 2px 2px 6px black;
+
+  -moz-transition: all .2s ease-in;
+  -o-transition: all .2s ease-in;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+  margin-left:10px;
+}
+
+#social img:hover {
+  background: #f6469f;
+  border-radius: 25px;
+  padding: 2px;
+  cursor:pointer;
+}
+#navigatie li{
+}
+
+#navigatie a{
+text-decoration: none;
+color:black;
+font-weight:bold;
+margin-bottom:10px;
+}
+
+#navigatie a:hover{
+  color: #f6469f;
+  cursor:pointer;
+}
+
+#navigatie h3 {
+  margin-bottom:15px;
+  text-align:center;
+}
+#contact{
+  text-align:center;
+}
+
+#contact img {
+  justify-content: left;
 }
