--- a/css/diensten.css
+++ b/css/diensten.css
@@ -221,8 +221,8 @@ footer{
 
 
 .container1 img{
-  max-width:25%;
-  width:25%;
+  max-width:180px;
+  width:180px;
   max-height:215px;
   margin-right:1em;
 
