--- a/css/diensten.css
+++ b/css/diensten.css
@@ -378,7 +378,7 @@ margin-bottom:10px;
 
 }
 
-@media screen (min-width: 1366px) {
+@media(min-width: 1366px) {
 .container1 p{
   text-align:justify;
   clear:both;
