--- a/css/diensten.css
+++ b/css/diensten.css
@@ -378,16 +378,9 @@ margin-bottom:10px;
 
 }
 
-@media(min-width: 1366px)
-{
+@media screen and (min-width: 1400px) {
 .container1 p{
-  text-align:justify;
-  clear:both;
-  font-family:'Gabriela';
   width:30%;
-  margin:auto;
-  margin-top:10px;
-  margin-bottom:20px;
   font-size:22px;
   }
 
