--- a/css/diensten.css
+++ b/css/diensten.css
@@ -375,13 +375,26 @@ margin-bottom:10px;
   justify-content: left;
 }
 
-
-
 @media (min-width: 1400px) {
 
 .container1 p{
   width:30%;
   font-size:22px;
               }
+
+#laatsteregel{
+font-size:18px;
+}
+
+.container1{
+  margin-left:28em;
+  margin-right:28em;
+  Padding:20px;
+  border: #cccccc solid 1px;
+  margin-bottom:20px;
+  background:#cde4b4;
+  object-fit:contain;
+  text-align:center;
+}
 
 }
