--- a/css/diensten.css
+++ b/css/diensten.css
@@ -5,6 +5,8 @@
 }
 
 body{
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   background-color:#f4f4f4;
   overflow-x:hidden;
 }
