--- a/css/diensten.css
+++ b/css/diensten.css
@@ -2,11 +2,13 @@
 *{
   margin:0;
   padding:0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  backface-visibility: hidden;
 }
 
 body{
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
   background-color:#f4f4f4;
   overflow-x:hidden;
 }
